--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>CV - Boxed</title>
+	<title>Miguel Angelo Laplana</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -104,7 +104,10 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 
-			<a class="downlad-btn" href="#">Download CV</a>
+			<a class="downlad-btn"
+				href="https://drive.google.com/file/d/1TCSvcABkE7XNacAlNJ7LnZqQ9iK46l8i/view?usp=sharing"
+				target="_blank" rel="noopener noreferrer">
+				Download CV</a>
 		</div><!-- container -->
 	</header>
 
