added amazon clone to portfolio

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
 								<h5>maplaplana13@gmail.com</h5>
-								<h6>REPLY IN 24 HOURS</h6>
+								<h6>REPLIES IN 24 HOURS</h6>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -161,6 +161,19 @@
 		</div><!-- container -->
 
 		<div class="portfolioContainer">
+			<div class="p-item deployed">
+				<div class="proj-box">
+					<a target="_blank" rel="noopener noreferrer" href="https://clone-laplana.web.app/" data-fluidbox>
+						<img src="images/amazon-proj.PNG" alt="">
+						<div class="overlay">
+							<div class="text">
+								<h4>Amazon Clone</h4>
+								<p>React, Firebase</p>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div><!-- p-item -->
 
 			<div class="p-item deployed">
 				<div class="proj-box">
@@ -184,26 +197,14 @@
 						<div class="overlay">
 							<div class="text">
 								<h4>Company Payroll System</h4>
-								<p>Express, MongoDB</p>
-							</div>
-						</div>
-					</a>
-				</div>
-			</div><!-- p-item -->
-
-			<div class="p-item developing">
-				<div class="proj-box">
-					<a target="_blank" rel="noopener noreferrer" data-fluidbox>
-						<img src="images/developing-proj.PNG" alt="">
-						<div class="overlay">
-							<div class="text">
-								<h4>Amazon Clone</h4>
 								<p>React, Firebase</p>
 							</div>
 						</div>
 					</a>
 				</div>
 			</div><!-- p-item -->
+
+
 			<div class="p-item deployed">
 				<div class="proj-box">
 					<a target="_blank" rel="noopener noreferrer" href="https://secrets-posting.herokuapp.com/"
@@ -487,9 +488,9 @@
 
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="800"
-									data-count="57">0</span></b></h1>
-						<h5 class="desc"><b>Programs Coded</b></h5>
+						<h1 class="title"><b><span class="counter-value" data-duration="1000"
+									data-count="10">0</span></b></h1>
+						<h5 class="desc"><b>Known Prog Languages</b></h5>
 					</div><!-- margin-b-30 -->
 				</div><!-- col-md-3-->
 
